replaced stream.collect(Collectors.toList)) with stream.toList()